--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "filterlists"]
-	path = filterlists
+[submodule "configs/ublock"]
+	path = configs/ublock
 	url = https://github.com/yokoffing/filterlists.git
-[submodule "NextDNS-Config"]
-	path = NextDNS-Config
+[submodule "configs/nextdns"]
+	path = configs/nextdns
 	url = https://github.com/yokoffing/NextDNS-Config.git
