chore: update submodule paths from configs to guides for better organization docs(README.md): enhance documentation with a table of contents and usage instructions for clarity feat: add uBlock settings file to provide users with a ready-to-use configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "configs/ublock"]
-	path = configs/ublock
+[submodule "guides/ublock"]
+	path = guides/ublock
 	url = https://github.com/yokoffing/filterlists.git
-[submodule "configs/nextdns"]
-	path = configs/nextdns
+[submodule "guides/nextdns"]
+	path = guides/nextdns
 	url = https://github.com/yokoffing/NextDNS-Config.git
